test: add e2e specs

--- a/app/app.css
+++ b/app/app.css
@@ -4,15 +4,17 @@
 @font-face {
 	font-family: "LiebeErika-Regular";
 	src: url("/fonts/06d53b10031cc01c7f208d283d054e0d.eot");
-	src: url("/fonts/06d53b10031cc01c7f208d283d054e0d.eot?#iefix")
+	src:
+		url("/fonts/06d53b10031cc01c7f208d283d054e0d.eot?#iefix")
 		format("embedded-opentype"),
 		url("/fonts/06d53b10031cc01c7f208d283d054e0d.woff") format("woff"),
 		url("/fonts/06d53b10031cc01c7f208d283d054e0d.woff2") format("woff2"),
 		url("/fonts/06d53b10031cc01c7f208d283d054e0d.ttf") format("truetype"),
 		url("/fonts/06d53b10031cc01c7f208d283d054e0d.svg#LiebeErika W03 Regular")
 		format("svg");
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-		U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+	unicode-range:
+		U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
+		U+2C60-2C7F, U+A720-A7FF;
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
@@ -21,7 +23,8 @@
 @font-face {
 	font-family: "LiebeErika-Medium";
 	src: url("/fonts/9897e38317b3a3c0a35153fcc9298387.eot");
-	src: url("/fonts/9897e38317b3a3c0a35153fcc9298387.eot?#iefix")
+	src:
+		url("/fonts/9897e38317b3a3c0a35153fcc9298387.eot?#iefix")
 		format("embedded-opentype"),
 		url("/fonts/9897e38317b3a3c0a35153fcc9298387.woff") format("woff"),
 		url("/fonts/9897e38317b3a3c0a35153fcc9298387.woff2") format("woff2"),
@@ -36,7 +39,8 @@
 @font-face {
 	font-family: "LiebeErika-Bold";
 	src: url("/fonts/630c0ad44781de163af5d966a9fb5ff8.eot");
-	src: url("/fonts/630c0ad44781de163af5d966a9fb5ff8.eot?#iefix")
+	src:
+		url("/fonts/630c0ad44781de163af5d966a9fb5ff8.eot?#iefix")
 		format("embedded-opentype"),
 		url("/fonts/630c0ad44781de163af5d966a9fb5ff8.woff") format("woff"),
 		url("/fonts/630c0ad44781de163af5d966a9fb5ff8.woff2") format("woff2"),
@@ -51,7 +55,8 @@
 @font-face {
 	font-family: "LiebeErika-Black";
 	src: url("/fonts/c74e0a6abeb07c2ecc029c85ddf522e2.eot");
-	src: url("/fonts/c74e0a6abeb07c2ecc029c85ddf522e2.eot?#iefix")
+	src:
+		url("/fonts/c74e0a6abeb07c2ecc029c85ddf522e2.eot?#iefix")
 		format("embedded-opentype"),
 		url("/fonts/c74e0a6abeb07c2ecc029c85ddf522e2.woff") format("woff"),
 		url("/fonts/c74e0a6abeb07c2ecc029c85ddf522e2.woff2") format("woff2"),
@@ -77,7 +82,7 @@
 	}
 
 	.using-mouse * {
-		outline: none !important;
+		outline: none;
 	}
 }
 
@@ -165,7 +170,7 @@
 		}
 
 		#slider {
-			transition: none !important;
+			transition: none;
 		}
 	}
 }
